- `processedComments` now includes `redactedText` and `rephrasedText` whenever they differ from the original text, regardless of which mode produced the `finalText`. This ensures the UI can always switch to Redact/Rephrase and display the correct AI-generated alternative (fixes cases like Row 1 in run 1040).

Files impacted:
- supabase/functions/post-process-comments/index.ts
# Post-Process Comments Edge Function - Recent Changes

## Latest Updates

### Enhanced Content Transformation
- **AI-Powered Redaction**: Improved AI models for intelligent content redaction
- **Smart Rephrasing**: Better preservation of meaning while ensuring anonymity
- **Policy Enforcement**: Enhanced automatic detection and replacement of sensitive content
- **Consistent Output**: Better formatting and structure preservation

### Improved Batch Processing
- **I/O Ratio Optimization**: Batch sizing now uses per-phase I/O ratios from `batch_sizing_config` (`redaction_io_ratio`, `rephrase_io_ratio`).
- **Token-Aware Greedy Chunking**: Implemented greedy chunk builder that respects input token limits (minus prompt reserve) and output token limits per phase, splitting chunks when needed.
- **Dual-Phase Guard**: When both redaction and rephrase are requested, chunks are further split to ensure each phase stays within its output token limit.
- **Safety Margins**: Configurable safety margin percentage applied to calculated batch sizes and to conservative input/output limits and AI call `max_tokens` to reduce overrun risk.
- **Large Dataset Support**: Improved handling of large comment volumes with stable chunking.
- **Timeout Protection**: Standardized timeouts via `POSTPROCESS_AI_REQUEST_TIMEOUT_MS` (default 140000 ms) and `POSTPROCESS_BEDROCK_REQUEST_TIMEOUT_MS` (default 140000 ms).

### Enhanced AI Integration
- **Multiple Provider Support**: Enhanced support for OpenAI and Azure OpenAI
- **Model Configuration**: Uses same configuration system as other functions